<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:orderInCategory="0"
        android:id="@+id/navigation_home2"
        android:icon="@drawable/ic_home_copy"
        android:title="@string/title_home"
        app:showAsAction="always|withText" />

    <item
        android:orderInCategory="1"
        android:id="@+id/navigation_set2"
        android:icon="@drawable/ic_settings_copy"
        android:title="@string/label_settings"
        app:showAsAction="always|withText"/>

    <item
        android:orderInCategory="2"
        android:id="@+id/navigation_test2"
        android:icon="@drawable/ic_test_copy"
        android:title="@string/label_test"
        app:showAsAction="always|withText"/>

    <item
        android:orderInCategory="3"
        android:id="@+id/navigation_information2"
        android:icon="@drawable/ic_information_copy"
        android:title="@string/nav_information"
        app:showAsAction="always|withText"/>

</menu>
