<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TestingFragment">

    <LinearLayout
        android:id="@+id/backCircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/testing_circle_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dip"
        android:paddingTop="32dip"
        android:paddingEnd="20dip"
        android:paddingBottom="32dip">

        <!--
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textviewTest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:text="@string/text_starttest"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbuttonLeftRot"
                android:layout_width="79sp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:srcCompat="@drawable/arrow_left_not_selected"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imgviewTesting"
                android:layout_width="103sp"
                android:layout_height="122sp"
                android:layout_gravity="center"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                app:srcCompat="@drawable/bovi_brush_stopped"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imgbuttonRightRot"
                android:layout_width="79sp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:srcCompat="@drawable/arrow_right_not_selected_copy"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textviewTimeTested"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:text="@string/time_begintest"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:typeface="sans" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTestButton"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgbuttonPlayPause"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_testPlayPause"
            android:minWidth="53dp"
            android:minHeight="53dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/start_play_test" />

        <Space
            android:layout_width="28dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/imgbuttonStop"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_testStop"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/stop_test" />

    </LinearLayout>

</LinearLayout>